# MLOPSGradedFinal

./: .gitignore  Dockerfile-simple  Makefile  README.md  docker-compose.yml  main-simple.py  pyproject.toml  repo_structure.txt  requirements.txt  testapi.py
.devcontainer/: devcontainer.json
.docs/: MLOPS1_2.txt
.github/workflows/: commit-on-dev.yml  lint-code.yml  predict_on_model_change.yml  retrain_on_change.yml
.pipelines/: preproc-train.yml
ARISA_DSML/: config.py  dataset.py  features.py  helpers.py  plots.py  predict.py  preproc.py  resolve.py  train.py
ARISA_DSML/modeling/: predict.py  train.py
MLOPSGRADEDFINAL/: Makefile  README.md  pyproject.toml
backend/: main.py  requirements.txt
data/processed/: diabetes.csv  test.csv
data/raw/: diabetes_new_test.csv  diabetes_test.csv  test.csv
docs/: MLOPS_Arch  mkdocs.yml
docs/docs/: index.md
frontend/: Dockerfile  streamlit_app.py
models/: catboost_model_diabetes.cbm  catboost_model_titanic.cbm  cv_results.csv  estimator.pkl  model_params.pkl  preds.csv  udc.pkl
notebooks/: 01_diabetes_refactored.ipynb  02-diabetes-MLflow.ipynb  03-cagers-Modelling_refactored.ipynb  03-diabetes-nannyml.ipynb  04-cagers-MLflow.ipynb  05-cagers-nannyml.ipynb  MLClassification.ipynb
