[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "ARISA_DSML"
version = "0.0.1"
description = "Project for full MLOPS Architecure with train / deploy pipelines"
authors = [
  { name = "Leszek Kwasniewski" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.12.0"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.isort]
profile = "black"
known_first_party = ["ARISA_DSML"]
force_sort_within_sections = true


